# dropbox_backup_to_external_disk_lib

./: .auto_version_from_date.json  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md  cache29.txt  dropbox_api_config.json  temp29.txt
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
automation_tasks_rs/src/encrypt_decrypt_with_ssh_key_mod/: crates_io_api_token_mod.rs  encrypt_decrypt_mod.rs  github_api_token_with_oauth2_mod.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/dropbox_backup_to_external_disk_lib/: all.html  enum.DropboxBackupToExternalDiskError.html  enum.Error.html  enum.LibError.html  fn.change_time_files.html  fn.compare_files.html  fn.compare_folders.html  fn.create_folders.html  fn.download_from_list.html  fn.download_one_file.html  fn.dropbox_api_config_initialize.html  fn.encode_token.html  fn.global_app_state.html  fn.global_config.html  fn.list_local.html  fn.list_remote.html  fn.move_local_files.html  fn.move_or_rename_local_files.html  fn.read_only_remove.html  fn.rename_local_files.html  fn.shorten_string.html  fn.sort_string_lines.html  fn.test_connection.html  fn.trash_files.html  fn.trash_folders.html  index.html  sidebar-items.js  static.APP_STATE.html  struct.AppConfig.html  struct.FileTxt.html  trait.AppStateMethods.html  type.Result.html
docs/dropbox_backup_to_external_disk_lib/app_state_mod/: fn.global_app_state.html  fn.global_config.html  index.html  sidebar-items.js  static.APP_STATE.html  struct.AppConfig.html  trait.AppStateMethods.html
docs/dropbox_backup_to_external_disk_lib/compare_mod/: fn.compare_files.html  fn.compare_folders.html  fn.compare_lists_internal.html  index.html  sidebar-items.js
docs/dropbox_backup_to_external_disk_lib/dropbox_api_token_with_oauth2_mod/: constant.BLUE.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  fn.authenticate_with_browser_and_save_file.html  fn.authentication_with_browser.html  fn.decrypt_text_with_metadata.html  fn.dropbox_api_config_initialize.html  fn.encrypt_and_save_file.html  fn.get_dropbox_secret_token.html  fn.refresh_tokens.html  index.html  sidebar-items.js  static.DROPBOX_API_CONFIG.html  struct.DropboxApiConfig.html  struct.SecretResponseAccessToken.html  struct.SecretResponseRefreshToken.html
docs/dropbox_backup_to_external_disk_lib/encrypt_decrypt_mod/: constant.BLUE.html  constant.GREEN.html  constant.RED.html  constant.RESET.html  constant.YELLOW.html  fn.decode64_from_string_to_32bytes.html  fn.decode64_from_string_to_string.html  fn.decrypt_symmetric.html  fn.encode64_from_32bytes_to_string.html  fn.encode64_from_bytes_to_string.html  fn.encode64_from_string_to_string.html  fn.encrypt_symmetric.html  fn.open_file_b64_get_string.html  fn.random_seed_32bytes_and_string.html  fn.shorten_vec_bytes_to_32bytes.html  fn.sign_seed_with_private_key_file.html  fn.sign_seed_with_ssh_agent.html  fn.sign_seed_with_ssh_agent_or_private_key_file.html  index.html  sidebar-items.js  struct.EncryptedTextWithMetadata.html  struct.PathStructInSshFolder.html
docs/dropbox_backup_to_external_disk_lib/error_mod/: enum.DropboxBackupToExternalDiskError.html  enum.Error.html  enum.LibError.html  index.html  sidebar-items.js  type.Result.html
docs/dropbox_backup_to_external_disk_lib/file_txt_mod/: index.html  sidebar-items.js  struct.FileTxt.html
docs/dropbox_backup_to_external_disk_lib/local_disk_mod/: fn.change_time_files.html  fn.create_folders.html  fn.get_content_hash.html  fn.list_local.html  fn.move_internal.html  fn.move_local_files.html  fn.move_local_files_internal_by_name.html  index.html  (+11 more)
src/: app_state_mod.rs  compare_mod.rs  crossterm_cli_mod.rs  dropbox_api_token_with_oauth2_mod.rs  encrypt_decrypt_mod.rs  error_mod.rs  file_txt_mod.rs  lib.rs  local_disk_mod.rs  local_mod.rs  ratatui_mod.rs  remote_dropbox_mod.rs  remote_mod.rs  utils_mod.rs
(+61 files in other folders)
