[package]
name = "dropbox_backup_to_external_disk_lib"
version = "2.1.110"
description = "Library project, one way sync from Dropbox to external disc"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/dropbox_backup_to_external_disk_lib/"
categories = ["programming"]
keywords = ["dropbox"]
publish = false

[dependencies]
log = "0.4.22"
pretty_env_logger="0.5.0"
chrono = "0.4.38"
unwrap = "1.2.1"
walkdir = "2.5.0"
filetime = "0.2.25"
humantime = "2.1.0"
rayon = "1.10.0"
uncased = "0.9.10"
dropbox-content-hasher = "0.3.0"
num-format = "0.4.4"
ctrlc = "3.4.5"
exitcode = "1.1.2"
crossterm = "0.28.1"

directories = "5.0.1"
inquire = "0.7.5"
anyhow="1.0.89"
thiserror="1.0.64"
serde_json = "1.0.128"
serde="1.0.210"
once_cell = "1.19.0"

[dependencies.dropbox-sdk]
version = "0.18.1"
default-features = false
features = ["dbx_files", "default_client"]
