[package]
name = "dropbox_backup_to_external_disk_lib"
version = "2.1.133"
description = "Library project, one way sync from Dropbox to external disc"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/dropbox_backup_to_external_disk_lib/"
# Allowed categories are listed here <https://crates.io/category_slugs>
categories = ["programming"]
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["dropbox", "maintained","ready-for-use"]
publish = false

[dependencies]
log = "0.4.22"
pretty_env_logger="0.5.0"
unwrap = "1.2.1"
walkdir = "2.5.0"
filetime = "0.2.25"
humantime = "2.1.0"
rayon = "1.10.0"
uncased = "0.9.10"
dropbox-content-hasher = "0.3.0"
num-format = "0.4.4"
ctrlc = "3.4.5"
exitcode = "1.1.2"
crossterm = "0.28.1"

directories = "5.0.1"
inquire = "0.7.5"
thiserror="1.0.64"
once_cell = "1.19.0"

reqwest={version="=0.12.12", features=["json","stream", "blocking"]}
serde ={ version= "1.0.219", features=["std","derive"]}
serde_json = "1.0.140"
ssh-key = { version = "0.6.7", features = [ "rsa", "encryption","ed25519"] }
ssh_agent_client_rs_git_bash = "0.0.19"
rsa = { version = "0.9.8", features = ["sha2","pem"] }
zeroize = {version="1.8.1", features=["derive"]}
aes-gcm = "0.10.3"
base64ct = {version = "1.7.3", features = ["alloc"] }
secrecy = "0.10.3"
chrono ="0.4.40"
crossplatform_path="2.0.1"

[dependencies.dropbox-sdk]
version = "0.18.1"
default-features = false
features = ["dbx_files", "default_client"]
